# readme-code-extractor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tests-run-default.sh  tests-setup-alpine.sh  tests-setup-rustup.sh
.github/workflows/: main.yml
negative_tests/: Cargo.toml  README.md
negative_tests/src/: lib.rs
negative_tests_runner/: Cargo.toml  README.md
negative_tests_runner/src/: bin  lib.rs
positive_tests/: Cargo.toml
positive_tests/src/: lib.rs
src/: lib.rs
tests/: simple_no_panic.md
